tests/neg/override-multi-file-error.check
-- [E164] Declaration Error: tests/neg/override-multi-file-error/B.scala:2:15 ------------------------------------------
error overriding method foo in class A of type => Int;
  method foo of type => String has incompatible type
... tests/neg/override-multi-file-error/A.scala
2 |  def foo: Int = 0
  |      -
  |      the overridden method is here
... tests/neg/override-multi-file-error/B.scala
2 |  override def foo: String = "0"   // error
  |               ^
  |               the overriding method has incompatible type
  |
  | longer explanation available when compiling with `-explain`
